src/assets/styles/login/login.less
@import '@a/styles/login/login-bubble.less';
@import '@a/styles/login/login-shake.less';
@import '@a/styles/login/login-register.less';

// 这个字体虽然好看但是会导致打包卡住的问题，先不处理
// @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300');

* {
	box-sizing: border-box;
}

.login-box {
	// font-family: 'Source Sans Pro', sans-serif;
	font-family: 'PFRE', sans-serif;
	color: white;
	font-weight: 300;
	background: #50a3a2;
	background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
	background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
	// background: #2ECC71;
	// background: -webkit-linear-gradient(top left, #50a3a2 0%, #2ECC71 100%);
	// background: linear-gradient(to bottom right, #50a3a2 0%, #2ECC71 100%);
	opacity: 0.8;
	position: absolute;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.login-box a {
	// font-family: 'Source Sans Pro', sans-serif;
	font-family: 'PFRE', sans-serif;
	color: white;
	font-weight: 300;
}

.login-box ::-webkit-input-placeholder {
	/* WebKit browsers */
	// font-family: 'Source Sans Pro', sans-serif;
	font-family: 'PFRE', sans-serif;
	color: white;
	font-weight: 300;
}

.login-box :-moz-placeholder {
	/* Mozilla Firefox 4 to 18 */
	// font-family: 'Source Sans Pro', sans-serif;
	font-family: 'PFRE', sans-serif;
	color: white;
	opacity: 1;
	font-weight: 300;
}

.login-box ::-moz-placeholder {
	/* Mozilla Firefox 19+ */
	// font-family: 'Source Sans Pro', sans-serif;
	font-family: 'PFRE', sans-serif;
	color: white;
	opacity: 1;
	font-weight: 300;
}

.login-box :-ms-input-placeholder {
	/* Internet Explorer 10+ */
	// font-family: 'Source Sans Pro', sans-serif;
	font-family: 'PFRE', sans-serif;
	color: white;
	font-weight: 300;
}

.container {
	max-width: 80%;
	margin: 0 auto;
	padding: 140px 0 0 0;
	height: 400px;
	text-align: center;
	line-height: 50px;
}

.container h1 {
	// font-size: 40px;
	font-size: 32px;
	-webkit-transition-duration: 1s;
	transition-duration: 1s;
	-webkit-transition-timing-function: ease-in-put;
	transition-timing-function: ease-in-put;
	font-weight: 200;
}

.form {
	padding: 20px 0;
	position: relative;
	z-index: 2;
	opacity: 1;
}

.form input {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	outline: 0;
	border: 1px solid rgba(255, 255, 255, 0.4);
	background-color: rgba(255, 255, 255, 0.2);
	width: 250px;
	border-radius: 3px;
	padding: 10px 15px;
	margin: 0 auto 10px auto;
	display: block;
	text-align: center;
	font-size: 18px;
	color: white;
	-webkit-transition-duration: 0.25s;
	transition-duration: 0.25s;
	font-weight: 300;
}

.form input:hover {
	background-color: rgba(255, 255, 255, 0.4);
}

.form input:focus {
	background-color: white;
	width: 300px;
	color: #53e3a6;
}

.form button {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	outline: 0;
	background-color: white;
	border: 0;
	padding: 10px 15px;
	color: #53e3a6;
	border-radius: 3px;
	width: 250px;
	cursor: pointer;
	font-size: 18px;
	-webkit-transition-duration: 0.25s;
	transition-duration: 0.25s;
}

.form button:hover {
	background-color: #f5f7f9;
}

